[package]
name = "discrete_log_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["net", "sync", "rt"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tracing = "0.1.40"
uuid = {version = "1.6.1", features = ["v4"]}
