[package]
name = "discrete_log_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
futures = "0.3.30"
rand = "0.8.5"
termion = "3.0.0"
tokio = { version = "1.35.1", features = ["net", "sync", "rt", "io-util", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = {version = "1.6.1", features = ["v4"]}
